# valhalla

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  valhalla.spec  valhalla.spec.in
data/: Makefile.am  so.bob131.valhalla.gresources.xml  so.bob131.valhalla.gschema.xml
data/gtk/: files.ui  main.ui  prefs-list.ui  prefs.ui  transfers.ui
data/ui/: main.ui
src/: Makefile.am  base.vala  config.vala  database.vala  gtk-widgets.vala  gvalhalla.vala  libvalhalla.vala  loader.vala  main.vala  module-api.vala  modules.vala  nautilus-extension.vala  screenshot.vala  thumbnailer.vala  utils-c.c  utils-cli.vala  utils-config.vala  utils-files.vala  utils-screenshot.vala  utils-ui.vala  utils.vala  valhalla-screenshot.vala  valhalla.vala
src/gtk/: files.vala  preferences-list-row.ui  transfers.ui  transfers.vala  window.vala
src/libvalhalla/: Makefile.am  libvalhalla.vala
src/modules/: Makefile.am  fuse.vala
src/valhalla/: Makefile.am  config.vala  database.vala  gresources.xml  loader.vala  nautilus-extension.vala  preferences.vala  screenshot.vala  thumbnailer.vala  valhalla-screenshot.vala  valhalla.vala
src/valhalla/gtk/: base-placeholder.ui  base-placeholder.vala  files.vala  preferences-list-row.ui  preferences.vala  screenshot-preview.ui  screenshot-preview.vala  transfers.vala  window.ui  window.vala
src/valhalla/gtk/file-widgets/: details.ui  details.vala  list-detail-stack.vala  list-placeholder.ui  list-row.ui  list.ui  list.vala
src/valhalla/gtk/preferences/: caution.ui  control-builder.ui  control-builder.vala  default-control.ui  help-popover.ui  module-row.ui
src/valhalla/gtk/transfers/: list-placeholder.ui  list.ui  transfer-widget.ui  transfers.vala
vapi/: flock.vapi  gee-0.8.vapi  gnome-desktop-3.vapi  sqlite3.vapi
